third_party/rust/indoc/v1/crate/tests/ui/printdoc-binary.stderr
error: byte strings are not supported in formatting macros
 --> $DIR/printdoc-binary.rs:4:15
  |
4 |     printdoc!(b"");
  |               ^^^
