third_party/rust/indoc/v1/crate/tests/ui/printdoc-binary.rs
use indoc::printdoc;

fn main() {
    printdoc!(b"");
}
